--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,15 +1,6 @@
-#!/bin/bash
-
-echo "Enter the first number":
-read num1
-
-echo "Enter the second number:"
-read num2
-
-if (( num1 > num2 )); then
-    echo "$num1 is greater than $num2"
-elif (( num1 < num2 )); then
-    echo "$num1 is less than $num2"
-else
-    echo "Both numbers are equal"
+num=10
+if [ $num -gt 5 ]; then
+   echo "Number is greater than 5"
+else 
+   echo "Number is 5 or less"
 fi
